--- a/materia/Fontend1/index.html
+++ b/materia/Fontend1/index.html
@@ -8,9 +8,12 @@
 </head>
 <body>
     <h1>Maquetas Front-end 1</h1>
+    <a href="./clase-4-LemonPieHTML/">Lemon Pie solo HTML</a>
     <a href="./clase-5-CvBatman/">Web CV Batman</a>
+    <a href="./clase-6-LemonPieConCSS/">Lemon Pie con algo de CSS</a>
     <a href="./clase-7a11-SuperHeroes/">Web SuperHeroes</a>
     <a href="./clase-13-Responsive/">Web Diseño Responsive</a>
     <a href="./clase-14-Flexbox/">Web Diseño Flexbox</a>
+    <a href="./examen-final/">Maqueta de examen final</a>
 </body>
 </html>
