--- a/materia/Frontend1/index.html
+++ b/materia/Frontend1/index.html
@@ -8,12 +8,14 @@
 </head>
 <body>
     <h1>Maquetas Front-end 1</h1>
-    <a href="./clase-4-LemonPieHTML/">Lemon Pie solo HTML</a>
-    <a href="./clase-5-CvBatman/">Web CV Batman</a>
-    <a href="./clase-6-LemonPieConCSS/">Lemon Pie con algo de CSS</a>
-    <a href="./clase-7a11-SuperHeroes/">Web SuperHeroes</a>
-    <a href="./clase-13-Responsive/">Web Diseño Responsive</a>
-    <a href="./clase-14-Flexbox/">Web Diseño Flexbox</a>
-    <a href="./examen-final/">Maqueta de examen final</a>
+    <ol>
+        <li><a href="./clase-4-LemonPieHTML/">Lemon Pie solo HTML</a></li>
+        <li><a href="./clase-5-CvBatman/">Web CV Batman</a></li>
+        <li><a href="./clase-6-LemonPieConCSS/">Lemon Pie con algo de CSS</a></li>
+        <li><a href="./clase-7a11-SuperHeroes/">Web SuperHeroes</a></li>
+        <li><a href="./clase-13-Responsive/">Web Diseño Responsive</a></li>
+        <li><a href="./clase-14-Flexbox/">Web Diseño Flexbox</a></li>
+        <li><a href="./examen-final/">Maqueta de examen final</a></li>
+    </ol>
 </body>
 </html>
