--- a/facultad/PresentacionSypa/sistInf.html
+++ b/facultad/PresentacionSypa/sistInf.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div>
-            <img src="./img/nuevo.png" alt="Logo Soluciones JPL">
+            <img src="./img/nuevo.png" alt="Logo Soluciones JPL" class="logo">
         </div>
         <h1>Sistema de Información</h1>
         <div>
