--- a/facultad/PresentacionSypa/index.html
+++ b/facultad/PresentacionSypa/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div>
-            <img src="./img/nuevo.png" alt="Logo Soluciones JPL">
+            <img src="./img/nuevo.png" alt="Logo Soluciones JPL" class="logo">
         </div>
         <div>
             <img src="./img/cofarsur-logo.png" alt="Logo Cofarsur">
