nuevos cambios presentación sypa

--- a/facultad/PresentacionSypa/sistOrg.html
+++ b/facultad/PresentacionSypa/sistOrg.html
@@ -45,12 +45,12 @@
         </section>
         <h2>Propuestas de solución</h2>
         <section class="desarrollo">
-            <ol>
-                <li type="1">Redefinición de la estructura del área, redistribución de las funciones.</li>
-                <li type="1">Nuevo manual de funciones.</li>
-                <li type="1">Reuniones quincenales de puestos operativos con personas del mando medio.<br>Informe por escrito vía e-mail luego de la reunión quincenal de puestos medios
+            <ul>
+                <li type="none"><i class="fas fa-sitemap fa-2x fa-lg" style="color:#fec051;"></i>  Redefinición de la estructura del área, redistribución de las funciones.</li>
+                <li type="none"><i class="fas fa-cogs fa-2x fa-lg" style="color:#fec051;"></i>  Nuevo manual de funciones.</li>
+                <li type="none"><i class="fas fa-users fa-2x fa-lg" style="color:#fec051;"></i>  Reuniones quincenales de puestos operativos con personas del mando medio. Informe por escrito vía e-mail luego de la reunión quincenal de puestos medios
                 </li>
-            </ol>
+            </ul>
             <div class="organigrama-propuesto">
                 <h3>Comparación entre organigrama propuesto y relevado</h3>
                 <img src="./img/sist-org-relevado.jpg" alt="Organigrama relevado" class="grafico">
