nueva modificación en proyecto sypa

--- a/facultad/PresentacionSypa/sistDec.html
+++ b/facultad/PresentacionSypa/sistDec.html
@@ -30,16 +30,16 @@
         </section>
         <h2>Análisis del sistema</h2>
         <section class="analisis">
-            <ul>
-                <li type="none"><i class="fas fa-check fa-2x fa-lg" style="color:#fec051;"></i>  Concentración de
+            <ul type="none">
+                <li><i class="fas fa-check fa-2x fa-lg" style="color:#fec051;"></i>  Concentración de
                     decisiones en gerente comercial.</li>
-                <li type="none"><i class="fas fa-check fa-2x fa-lg" style="color:#fec051;"></i>  Jefe de ventas con pocas
+                <li><i class="fas fa-check fa-2x fa-lg" style="color:#fec051;"></i>  Jefe de ventas con pocas
                     decisiones; tipo de poder experto.</li>
-                <li type="none"><i class="fas fa-check fa-2x fa-lg" style="color:#fec051;"></i>  Puestos operativos con
+                <li><i class="fas fa-check fa-2x fa-lg" style="color:#fec051;"></i>  Puestos operativos con
                     mucha capacidad debido a la amplia trayectoria en la empresa.</li>
-                <li type="none"><i class="fas fa-check fa-2x fa-lg" style="color:#fec051;"></i>  Entorno complejo y
+                <li><i class="fas fa-check fa-2x fa-lg" style="color:#fec051;"></i>  Entorno complejo y
                     estable.</li>
-                <li type="none"><i class="fas fa-check fa-2x fa-lg" style="color:#fec051;"></i>  Buena comunicación
+                <li><i class="fas fa-check fa-2x fa-lg" style="color:#fec051;"></i>  Buena comunicación
                     interna.</li>
             </ul>
         </section>
@@ -70,11 +70,11 @@
             </div>
             <div class="cambios">
                 <h3>Efectos de las propuestas</h3>
-                <ul>
-                    <li type="none">Total de 70 decisiones, a comparación de 65 según lo relevado.</li>
-                    <li type="none">Jefatura de Ventas tomará decisiones tácticas.</li>
-                    <li type="none">Mejor distribución de la unidad funcional de licitaciones.</li>
-                    <li type="none">Mayor dotación de decisiones al 4to nivel jerárquico.</li>
+                <ul type="none">
+                    <li>Total de 70 decisiones, a comparación de 65 según lo relevado.</li>
+                    <li>Jefatura de Ventas tomará decisiones tácticas.</li>
+                    <li>Mejor distribución de la unidad funcional de licitaciones.</li>
+                    <li>Mayor dotación de decisiones al 4to nivel jerárquico.</li>
                 </ul>
             </div>
             <h3 class="subtitulo">Nueva distribución de decisiones</h3>
