--- a/facultad/PresentacionSypa/sistOrg.html
+++ b/facultad/PresentacionSypa/sistOrg.html
@@ -31,11 +31,11 @@
             </div>
             <div class="caracteristicas">
                 <h3>Características de la organización:</h3>
-                <ul>
-                    <li type="disc">Estructura funcional.</li>
-                    <li type="disc">Fallas en la coordinación entre las áreas.</li>
-                    <li type="disc">División de trabajo y coordinación.</li>
-                    <li type="disc">Jerarquía del área.</li>
+                <ul type="disc">
+                    <li>Estructura funcional.</li>
+                    <li>Fallas en la coordinación entre las áreas.</li>
+                    <li>División de trabajo y coordinación.</li>
+                    <li>Jerarquía del área.</li>
                 </ul>
             </div>
         </section>
@@ -45,10 +45,10 @@
         </section>
         <h2>Propuestas de solución</h2>
         <section class="desarrollo">
-            <ul>
-                <li type="none"><i class="fas fa-sitemap fa-2x fa-lg" style="color:#fec051;"></i>  Redefinición de la estructura del área, redistribución de las funciones.</li>
-                <li type="none"><i class="fas fa-cogs fa-2x fa-lg" style="color:#fec051;"></i>  Nuevo manual de funciones.</li>
-                <li type="none"><i class="fas fa-users fa-2x fa-lg" style="color:#fec051;"></i>  Reuniones quincenales de puestos operativos con personas del mando medio. Informe por escrito vía e-mail luego de la reunión quincenal de puestos medios
+            <ul type="none">
+                <li><i class="fas fa-sitemap fa-2x fa-lg" style="color:#fec051;"></i>  Redefinición de la estructura del área, redistribución de las funciones.</li>
+                <li><i class="fas fa-cogs fa-2x fa-lg" style="color:#fec051;"></i>  Nuevo manual de funciones.</li>
+                <li><i class="fas fa-users fa-2x fa-lg" style="color:#fec051;"></i>  Reuniones quincenales de puestos operativos con personas del mando medio. Informe por escrito vía e-mail luego de la reunión quincenal de puestos medios
                 </li>
             </ul>
             <div class="organigrama-propuesto">
