--- a/facultad/PresentacionSypa/sistInf.html
+++ b/facultad/PresentacionSypa/sistInf.html
@@ -27,14 +27,14 @@
         <section class="funcionamiento">
             <div class="caracteristicas">
                 <h3>Características de los datos:</h3>
-                <ul>
-                    <li type="disc">Oportuna.</li>
-                    <li type="disc">Relevante.</li>
-                    <li type="disc">Completa.</li>
-                    <li type="disc">Selectiva.</li>
-                    <li type="disc">Exacta.</li>
-                    <li type="disc">Clara.</li>
-                    <li type="disc">Sencilla.</li>
+                <ul type="disc">
+                    <li>Oportuna.</li>
+                    <li>Relevante.</li>
+                    <li>Completa.</li>
+                    <li>Selectiva.</li>
+                    <li>Exacta.</li>
+                    <li>Clara.</li>
+                    <li>Sencilla.</li>
                 </ul>
             </div>
             <img src="./img/sist-info-func.jpg" alt="Gráfico Sistema de Información" class="grafico">
