--- a/facultad/PresentacionSypa/sistProc.html
+++ b/facultad/PresentacionSypa/sistProc.html
@@ -27,13 +27,13 @@
         <section class="analisis">
             <div>
                 <img src="./img/sist-proc-relevado.jpg" alt="Flujograma relevado" class="grafico">
-                <ul>
-                    <li type="none"><i class="fas fa-check fa-2x fa-lg" style="color:#fec051;"></i>  Falta de formalización.</li>
-                    <li type="none"><i class="fas fa-check fa-2x fa-lg" style="color:#fec051;"></i>  No hay descripción clara de sus límites.</li>
-                    <li type="none"><i class="fas fa-check fa-2x fa-lg" style="color:#fec051;"></i>  No hay un responsable del proceso.</li>
-                    <li type="none"><i class="fas fa-check fa-2x fa-lg" style="color:#fec051;"></i>  El patrón del pensamiento está centrado en el proceso.</li>
-                    <li type="none"><i class="fas fa-check fa-2x fa-lg" style="color:#fec051;"></i>  Se hace énfasis en la puntualidad y exactitud como medida de efectividad.</li>
-                    <li type="none"><i class="fas fa-check fa-2x fa-lg" style="color:#fec051;"></i>  Para asegurar la eficiencia del proceso se apunta al tiempo de procesamiento.</li>
+                <ul type="none">
+                    <li><i class="fas fa-check fa-2x fa-lg" style="color:#fec051;"></i>  Falta de formalización.</li>
+                    <li><i class="fas fa-check fa-2x fa-lg" style="color:#fec051;"></i>  No hay descripción clara de sus límites.</li>
+                    <li><i class="fas fa-check fa-2x fa-lg" style="color:#fec051;"></i>  No hay un responsable del proceso.</li>
+                    <li><i class="fas fa-check fa-2x fa-lg" style="color:#fec051;"></i>  El patrón del pensamiento está centrado en el proceso.</li>
+                    <li><i class="fas fa-check fa-2x fa-lg" style="color:#fec051;"></i>  Se hace énfasis en la puntualidad y exactitud como medida de efectividad.</li>
+                    <li><i class="fas fa-check fa-2x fa-lg" style="color:#fec051;"></i>  Para asegurar la eficiencia del proceso se apunta al tiempo de procesamiento.</li>
                 </ul>
             </div>
         </section>
@@ -43,9 +43,9 @@
         </section>
         <h2>Propuestas de solución</h2>
         <section class="propuestas">
-            <ul>
-                <li type="none"><i class="fas fa-cogs fa-2x fa-lg" style="color:#fec051;"></i>  Formalización del proceso de licitaciones que defina los tiempos estándares que mejoran la efectividad del proceso y faciliten el control de los mismos.</li>
-                <li type="none"><i class="fas fa-cogs fa-2x fa-lg" style="color:#fec051;"></i>  Modernización del proceso relevado a través de la separación del mismo en dos procesos distintos.</li>
+            <ul type="none">
+                <li><i class="fas fa-cogs fa-2x fa-lg" style="color:#fec051;"></i>  Formalización del proceso de licitaciones que defina los tiempos estándares que mejoran la efectividad del proceso y faciliten el control de los mismos.</li>
+                <li><i class="fas fa-cogs fa-2x fa-lg" style="color:#fec051;"></i>  Modernización del proceso relevado a través de la separación del mismo en dos procesos distintos.</li>
             </ul>
             <div class="flujogramas">
                 <img src="./img/sist-proc-compras.jpg" alt="Flujograma compras" class="grafico">
