otra modificación al proyecto sypa

--- a/facultad/PresentacionSypa/sistProc.html
+++ b/facultad/PresentacionSypa/sistProc.html
@@ -17,7 +17,7 @@
         <div>
             <img src="./img/nuevo.png" alt="Logo Soluciones JPL" class="logo">
         </div>
-        <h1>Sistema de Información</h1>
+        <h1>Sistema de Procesos</h1>
         <div>
             <img src="./img/cofarsur-logo.png" alt="Logo Cofarsur">
         </div>
