agregando cuadros Facu al proyecto sypa

--- a/facultad/PresentacionSypa/sistOrg.html
+++ b/facultad/PresentacionSypa/sistOrg.html
@@ -23,7 +23,7 @@
         </div>
     </header>
     <main>
-        <h2>Diferencias entre el sistema oficial y el sistema relevado</h2>
+        <h2>Diferencias entre el organigrama oficial y el organigrama relevado</h2>
         <section>
             <div class="organigramas">
                 <img src="./img/sist-org-actual.jpg" alt="Organigrama formal" class="grafico">
