--- a/facultad/PresentacionSypa/sistProc.html
+++ b/facultad/PresentacionSypa/sistProc.html
@@ -25,17 +25,23 @@
     <main>
         <h2>Relevamiento y análisis</h2>
         <section class="analisis">
-            <div>
+            <div class="comparacion">
+                <img src="./img/sist-proc-cuadroRelevado.jpg" alt="Cuadro relevado" class="grafico">
                 <img src="./img/sist-proc-relevado.jpg" alt="Flujograma relevado" class="grafico">
-                <ul type="none">
-                    <li><i class="fas fa-check fa-2x fa-lg" style="color:#fec051;"></i>  Falta de formalización.</li>
-                    <li><i class="fas fa-check fa-2x fa-lg" style="color:#fec051;"></i>  No hay descripción clara de sus límites.</li>
-                    <li><i class="fas fa-check fa-2x fa-lg" style="color:#fec051;"></i>  No hay un responsable del proceso.</li>
-                    <li><i class="fas fa-check fa-2x fa-lg" style="color:#fec051;"></i>  El patrón del pensamiento está centrado en el proceso.</li>
-                    <li><i class="fas fa-check fa-2x fa-lg" style="color:#fec051;"></i>  Se hace énfasis en la puntualidad y exactitud como medida de efectividad.</li>
-                    <li><i class="fas fa-check fa-2x fa-lg" style="color:#fec051;"></i>  Para asegurar la eficiencia del proceso se apunta al tiempo de procesamiento.</li>
-                </ul>
             </div>
+            <ul type="none">
+                <li><i class="fas fa-check fa-2x fa-lg" style="color:#fec051;"></i> Falta de formalización.</li>
+                <li><i class="fas fa-check fa-2x fa-lg" style="color:#fec051;"></i> No hay descripción clara de sus
+                    límites.</li>
+                <li><i class="fas fa-check fa-2x fa-lg" style="color:#fec051;"></i> No hay un responsable del proceso.
+                </li>
+                <li><i class="fas fa-check fa-2x fa-lg" style="color:#fec051;"></i> El patrón del pensamiento está
+                    centrado en el proceso.</li>
+                <li><i class="fas fa-check fa-2x fa-lg" style="color:#fec051;"></i> Se hace énfasis en la puntualidad y
+                    exactitud como medida de efectividad.</li>
+                <li><i class="fas fa-check fa-2x fa-lg" style="color:#fec051;"></i> Para asegurar la eficiencia del
+                    proceso se apunta al tiempo de procesamiento.</li>
+            </ul>
         </section>
         <h2>Diagnóstico</h2>
         <section class="diagnostico">
@@ -44,12 +50,21 @@
         <h2>Propuestas de solución</h2>
         <section class="propuestas">
             <ul type="none">
-                <li><i class="fas fa-cogs fa-2x fa-lg" style="color:#fec051;"></i>  Formalización del proceso de licitaciones que defina los tiempos estándares que mejoran la efectividad del proceso y faciliten el control de los mismos.</li>
-                <li><i class="fas fa-cogs fa-2x fa-lg" style="color:#fec051;"></i>  Modernización del proceso relevado a través de la separación del mismo en dos procesos distintos.</li>
+                <li><i class="fas fa-cogs fa-2x fa-lg" style="color:#fec051;"></i> Formalización del proceso de
+                    licitaciones que defina los tiempos estándares que mejoran la efectividad del proceso y faciliten el
+                    control de los mismos.</li>
+                <li><i class="fas fa-cogs fa-2x fa-lg" style="color:#fec051;"></i> Modernización del proceso relevado a
+                    través de la separación del mismo en dos procesos distintos.</li>
             </ul>
             <div class="flujogramas">
-                <img src="./img/sist-proc-compras.jpg" alt="Flujograma compras" class="grafico">
-                <img src="./img/sist-proc-ventas.jpg" alt="Flujograma ventas" class="grafico">
+                <div class="comparacion">
+                    <img src="./img/sist-proc-cuadroCompras.jpg" alt="Cuadro compras" class="grafico">
+                    <img src="./img/sist-proc-compras.jpg" alt="Flujograma compras" class="grafico">
+                </div>
+                <div class="comparacion">
+                    <img src="./img/sist-proc-cuadroVentas.jpg" alt="Cuadro ventas" class="grafico">
+                    <img src="./img/sist-proc-ventas.jpg" alt="Flujograma ventas" class="grafico">
+                </div>
             </div>
         </section>
         <section class="botones">
